Merge main branch and resolve conflicts
- Resolved conflicts in package.json by merging both sets of scripts
- Updated generate-icons.js to ES modules and added desktop icon generation
- Used latest package-lock.json from main

Co-authored-by: atomicdeploy <242969723+atomicdeploy@users.noreply.github.com>